[gd_scene load_steps=4 format=2]

[ext_resource path="res://levels/planets/early/the_egg_world.png" type="Texture" id=1]
[ext_resource path="res://objects/shortcuts/planet/planet_shortcut_default.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 162.74
height = 36.0623

[node name="PlanetShortcutDefault" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.66968, 12.7977 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_PlanetShortcutDefault_body_entered"]
[connection signal="readyToRoll" from="." to="." method="_on_PlanetShortcutDefault_readyToRoll"]
